# bazel-rules

./: .bazelrc  .gitignore  .travis.yml  BUILD  Dockerfile  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  cloudbuild.yaml  config.bzl  deps_extension.bzl  extensions.bzl  go.mod  go.sum  go_repositories.bzl  helm.BUILD  internal_deps.bzl  kubectl.BUILD  repositories.bzl  stamp.sh  toolchains.bzl  yq.BUILD
.github/workflows/: ci-tests.yaml  integration-tests.yaml  pr.yaml  release-gen.sh  release.yaml
docs/: BUILD  gcs_upload.md  helm_chart.md  helm_lint.md  helm_pull.md  helm_push.md  helm_release.md  helm_uninstall.md  k8s_namespace.md  sops_decrypt.md
examples/base-package/: BUILD  Chart.yaml  values.yaml
examples/chart_override/: BUILD.bazel
examples/chart_override/test_chart/: Chart.yaml
examples/chart_with_deps/: BUILD.bazel
examples/chart_with_deps/test_chart/templates/: _helpers.tpl  deployment.yaml  svc.yaml
examples/chart_with_image/: BUILD.bazel
examples/chart_with_image/test_chart/templates/: _helpers.tpl
examples/deps-bazel-rules-example/: BUILD  Chart.yaml  requirements.yaml  values.yaml
examples/empty_chart/: BUILD.bazel
examples/release_local_chart/: BUILD.bazel
examples/release_local_chart/test_chart/: values.yaml
examples/release_remote_chart/: BUILD.bazel
examples/release_with_secrets/: BUILD.bazel  secrets.enc.yaml
examples/release_with_secrets/test_chart/templates/: svc.yaml
examples/simple_chart/: BUILD.bazel
examples/simple_chart/test_chart/templates/: deployment.yaml
gcs/: BUILD  README.md  defs.bzl  gcs-upload.bzl  gcs-upload.sh.tpl  gcs.bzl
gcs/private/: BUILD  gcloud_toolchain.bzl  gcs_upload.bzl
helm/: BUILD  README.md  def.bzl  defs.bzl  helm-chart-package.bzl  helm-chart-package.sh.tpl  helm-chart-package_impl.bzl  helm-diff.bzl  helm-diff.sh.tpl  helm-lint.bzl  helm-lint.sh.tpl  helm-push.bzl  helm-release.bzl  helm-release.sh.tpl  helm.bzl
helm/private/: BUILD  chart_srcs.bzl  helm-chart-package.bzl  helm-chart-package.sh.tpl  helm-push.bzl  helm-release.bzl  helm-release.sh.tpl  helm_chart.bzl  helm_chart_providers.bzl  helm_lint_test.bzl  helm_package.bzl  helm_package.sh.tpl  helm_pull.bzl  helm_push.bzl  helm_release.bzl  helm_toolchain.bzl  helm_uninstall.bzl  substitute.sh.tpl
helm/private/lib/chart/: BUILD.bazel  chart.go  chart_test.go
helm/private/package/: BUILD  flags.go  helm_package.bzl  image.go  image_test.go  package.go
helm/private/release/: helm-release.sh.tpl
helm/private/repository/: BUILD.chart_dep.tpl  chart_dep.bzl
helm/private/tests/: BUILD.bazel  helm_chart_validation.bzl  helm_chart_validation.sh.template
helm/private/tests/testdata/charts/basic/: Chart.yaml  values.yaml
helm/private/tests/testdata/charts/external-deps/: Chart.yaml  values.yaml
helm/private/tests/testdata/charts/external-deps/templates/: deployment.yaml
helm/private/tests/testdata/templates/: test-sa-template.yaml
helm/private/tests/testdata/values/: random-values-2.yaml  random-values.yaml
helm/tests/helm_chart/: BUILD  chart_test.bzl  charts.bzl
helm/tests/helm_chart/charts/a/: Chart.yaml
helm/tests/helm_chart/charts/b/: Chart.yaml  values.yaml
helm/tests/helm_chart/charts/c/: Chart.yaml  values.yaml
helm/tests/helm_chart/charts/c/templates/: secret.yaml
helm/tests/helm_chart/charts/crds/: Chart.yaml  values.yaml
helm/tests/helm_chart/charts/noapiversion/: Chart.yaml  values.yaml
helm/tests/helm_chart/charts/nomanifest/: values.yaml
helm/tests/helm_chart/charts/omitfiles/: Chart.yaml  NOTES.txt
helm/tests/helm_chart/charts/valuesschema/: Chart.yaml  values.schema.json
helm/tests/helm_chart/charts/whole/: Chart.yaml
helm/tests/helm_chart/charts/wholemanifest/: Chart.yaml
helm/tests/helm_chart/charts/withdeps/: Chart.yaml
helm/tests/helm_chart/files/: configmap.yaml  service.yaml
helm/tests/helm_pull/: BUILD
helm/tests/helm_push/: BUILD  repoconfig.yaml
helpers/: BUILD  helpers.bzl
k8s/: BUILD  README.md  def.bzl  defs.bzl  k8s-namespace.bzl  k8s-namespace.sh.tpl  k8s-sa.bzl  k8s-sa.sh.tpl  k8s-workload-identity.bzl  k8s-workload-identity.sh.tpl  k8s.bzl
k8s/private/: BUILD  k8s-namespace.bzl  k8s_namespace.bzl  k8s_namespace.sh.tpl  kubectl_toolchain.bzl
libs/: BUILD
repositories/: deps.bzl  docker_deps.bzl  helm_deps.bzl  helm_repositories.bzl  kubectl_repositories.bzl  repositories.bzl  sops_repositories.bzl  yq_deps.bzl  yq_repositories.bzl
sops/: BUILD  README.md  def.bzl  defs.bzl  sops-decrypt-macro.bzl  sops-decrypt.bzl  sops-decrypt.sh.tpl  sops.bzl  sops_decrypt.bzl
sops/private/: BUILD  sops_decrypt.bzl  sops_decrypt_macro.bzl  sops_toolchain.bzl
sops/private/decrypt/: BUILD  flags.go  main.go  sops_decrypt.bzl
tests/: cluster.yaml  create-k8s-cluster-tiller.sh  create-k8s-cluster-tillerless.sh  create-k8s-cluster.sh  delete-k8s-cluster.sh  k8s-setup.sh  setup-k8s-tools.sh  setup.sh
tests/charts/nginx/: .sops.yaml  BUILD  secrets.yaml  values.yaml
tests/charts/nginx-with-deps/: BUILD  Chart.yaml  values.yaml
tests/charts/nginx-with-deps/templates/: deployment.yaml
tests/charts/nginx/templates/: deployment.yaml
tests/resources/chartmuseum/: values.yaml
tests/resources/kind/roles/: roles-tiller.yaml
tests/rules/: package_spec_test.go  push_spec_test.go  release_spec_test.go  release_using_sops_spec_test.go  release_with_deps_spec_test.go  release_with_namespace_dep_test.go  release_with_workload.go  release_with_workload_test.go
toolchains/: register.bzl
toolchains/gcloud/: BUILD  BUILD.tpl  def.bzl  gcloud.BUILD  repositories.bzl  toolchain.bzl
toolchains/gpg/: BUILD  gpg_toolchain.bzl
toolchains/gpg/lib/: BUILD  gpg_darwin  gpg_linux
toolchains/helm/: BUILD  BUILD.tpl  def.bzl  helm_toolchain.bzl  repositories.bzl  toolchain.bzl
toolchains/helm-2-16/: BUILD
toolchains/helm-3/: BUILD  BUILD.tpl  toolchain.bzl
toolchains/kubectl/: BUILD  kubectl_toolchain.bzl  toolchain.bzl
toolchains/sops/: BUILD  sops_toolchain.bzl  toolchain.bzl
toolchains/yq/: BUILD  yq_toolchain.bzl
(+2 files in other folders)
