
module(name = "masmovil_bazel_rules", version = "2.0.0", bazel_compatibility = [">=6.0.0"])

bazel_dep(name = "aspect_bazel_lib", version = "1.32.0")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "rules_oci", version = "1.4.0")

toolchains = use_extension("@masmovil_bazel_rules//:extensions.bzl", "toolchains")
toolchains.helm()
toolchains.sops()
toolchains.kubectl()
toolchains.gcloud()

use_repo(toolchains, "helm_toolchains")
use_repo(toolchains, "sops_toolchains")
use_repo(toolchains, "kubectl_toolchains")
use_repo(toolchains, "gcloud_toolchains")

register_toolchains("@helm_toolchains//:all")
register_toolchains("@sops_toolchains//:all")
register_toolchains("@kubectl_toolchains//:all")
register_toolchains("@gcloud_toolchains//:all")
