
module(name = "masmovil_bazel_rules", version = "2.0.0", bazel_compatibility = [">=6.0.0"])

bazel_dep(name = "aspect_bazel_lib", version = "1.32.0")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_pkg", version = "0.9.1")

bazel_dep(name = "rules_oci", version = "1.4.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci", dev_dependency = True)
oci.pull(
    name = "distroless_java",
    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")

toolchains = use_extension("@masmovil_bazel_rules//:extensions.bzl", "toolchains")
toolchains.install()

use_repo(toolchains, "helm_toolchains")
use_repo(toolchains, "sops_toolchains")
use_repo(toolchains, "kubectl_toolchains")
use_repo(toolchains, "gcloud_toolchains")

register_toolchains("@helm_toolchains//:all")
register_toolchains("@sops_toolchains//:all")
register_toolchains("@kubectl_toolchains//:all")
register_toolchains("@gcloud_toolchains//:all")

utils = use_extension("@masmovil_bazel_rules//:extensions.bzl", "utils")

utils.pull(
    name = "helm_chart_a",
    chart_name = "a_values",
    repo_url = "http://localhost:8080/charts",
    version = "0.0.0",
)
use_repo(utils, "helm_chart_a")

deps = use_extension("@masmovil_bazel_rules//:deps_extension.bzl", "non_module_dependencies")
use_repo(deps, "io_bazel_rules_docker")
