load("//helm:defs.bzl", "helm_chart")

helm_chart(
    name = "package",
    # Override some attributes of the chart via this rule
    chart_name = "random_chart_name",
    version = "v1.0.0",
    app_version = "v2.3.4",
    api_version = "v2",
    description = "Helm chart description placed inside Chart.yaml",
    # ----
    srcs = glob(["test_chart/**"]),
)
