load("//helm:defs.bzl", "helm_chart", "helm_release")

helm_chart(
    name = "package",
    chart_name = "random_chart_name",
    srcs = glob(["test_chart/**"]),
)

helm_release(
    name = "install",
    chart = ":chart",
    namespace = "myapp",
    release_name = "release-name",
    values = glob(["charts/myapp/values.yaml"]),
)
